# nixup

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  RTK.md  bacon.toml  cliff.toml  clippy.toml  deny.toml  flake.nix  justfile  nixup.toml.example  rust-toolchain.toml  rustfmt.toml  skills-lock.json  taplo.toml
.config/: nextest.toml
.github/: dependabot.yml  nixup.rb.tmpl
.github/fixtures/help/: expected.txt
.github/fixtures/version/: expected.txt
.github/rulesets/: branch-master.json  tag-release.json
.github/workflows/: codeql.yml  fixtures.yml  nightly.yml  release.yml  verify-flake.yml  verify-rust.yml
Formula/: nixup.rb
crates/nixup/: Cargo.toml
crates/nixup-core/: Cargo.toml
crates/nixup-core/src/: config.rs  error.rs  flake.rs  hosts.rs  lib.rs  scaffold.rs
crates/nixup-ops/: Cargo.toml
crates/nixup-ops/src/: error.rs  lib.rs  nix.rs  process.rs  stow.rs
crates/nixup-smoke/: Cargo.toml
crates/nixup-smoke/src/: lib.rs
crates/nixup/src/: cli.rs  commands.rs  main.rs  output.rs  runtime.rs
crates/nixup/tests/: cli_config.rs  cli_help.rs
docs/plans/: 2026-07-16-nix-multi-machine.md
docs/superpowers/specs/: 2026-07-16-nix-multi-machine-design.md
hosts/: inventory.example.nix
hosts/my-linux/: default.nix
hosts/my-mac/: default.nix
modules/agents/: default.nix
modules/agents/pi/: AGENTS.global.md  README.md  agent-types.json  mcp.json  models-aliases.json  sandbox.json  settings.json
modules/agents/pi/agents/: bite-size-reviewer.md  bite-size-writer.md  browser-use-scout.md  code-graph-scout.md  code-reviewer.md  code-search-scout.md  docs-scout.md  implementer.md  milestone-organizer.md  plan-reviewer.md  plan-writer.md  pr-opener.md  project-init.md  spec-reviewer.md  spec-writer.md  stack-scout.md  web-browse-scout.md  web-scout.md  webwright-scout.md
modules/agents/pi/docs/: child-tools.md  web-and-browser.md
modules/agents/pi/prompts/: goal.md  harness.md  init.md
modules/agents/pi/skills/goal-harness/: SKILL.md
modules/agents/pi/templates/project/: AGENTS.md.tmpl  subdir-AGENTS.md.tmpl
modules/agents/pi/workflows/: goal-harness.js  milestone-review.js  model-tiers.json  package.json  research-fanout.js
modules/common/: default.nix
modules/darwin/: cloudflare-remote-access.nix  default.nix  home.nix  zerobrew.nix
modules/linux/: default.nix
modules/shell/: default.nix
scripts/: run-fixtures.sh  smoke-pi-harness.sh  smoke.nu
scripts/archived/: bootstrap.nu  smoke.nu
