[package]
name = "nixup-smoke"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Smoke checks for declared developer tools"

[dependencies]
nixup-core = { path = "../nixup-core" }
thiserror = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
