[package]
name = "nixup"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Bootstrap, apply, and smoke-test multi-host Nix flakes"
keywords = ["cli", "nix", "flake", "home-manager", "nix-darwin"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[[bin]]
name = "nixup"
path = "src/main.rs"

[dependencies]
nixup-core = { path = "../nixup-core" }
nixup-ops = { path = "../nixup-ops" }
nixup-smoke = { path = "../nixup-smoke" }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
